--- a/AppExample1/app/src/main/res/values/strings.xml
+++ b/AppExample1/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AppExample1</string>
+    <string name="title_activity_calculadora">CalculadoraActivity</string>
 </resources>
